--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
       <h1 id="title" class="left">Vegetables</h1>
       <div id="user" class="right">
         <div class="icons">
-          <a href="https://www.facebook.com/" id="icon_fb"><img src="images/btn_facebook.png"></a>
-          <a href="https://www.instagram.com/" id="icon_ig"><img src="images/btn_instagram.png"></a>
+          <a href="https://www.facebook.com/" id="icon_fb" title="Facebook"><img src="images/btn_facebook.png"></a>
+          <a href="https://www.instagram.com/" id="icon_ig" title="Instagram"><img src="images/btn_instagram.png"></a>
         </div><!--icon-->
         <div class="btns">
-          <button id="btn_login" onclick="javascript:location.href='#'">LOGIN</button>
-          <button id="btn_join" onclick="javascript:location.href='#'">JOIN</button>
+          <button id="btn_login" onclick="javascript:location.href='#'" title="Login">LOGIN</button>
+          <button id="btn_join" onclick="javascript:location.href='#'" title="Join">JOIN</button>
         </div><!--btns-->
       </div><!--user right-->
     </div><!--container-->
@@ -28,11 +28,11 @@
   <nav>
     <div class="container">
       <ul class="longbox">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Vegetables</a></li>
-        <li><a href="#">Online</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#" title="Home">Home</a></li>
+        <li><a href="#" title="About Us">About Us</a></li>
+        <li><a href="#" title="Vegetables">Vegetables</a></li>
+        <li><a href="#" title="Online">Online</a></li>
+        <li><a href="#" title="Contact">Contact</a></li>
       </ul>
     </div><!--container-->
   </nav>
